use env variables for table names

--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ TWILIO_WHATSAPP_NUMBER=
 
 AIRTABLE_API_KEY=
 AIRTABLE_BASE_ID=
-AIRTABLE_TABLE_NAME=
+AIRTABLE_CUSTOMERS_TABLE_NAME=
+AIRTABLE_TEMPLATES_TABLE_NAME=
