--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "twilio-run": "^3.4.1"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
     "node-fetch": "^2.6.7",
     "opn": "^6.0.0",
     "prompts": "^2.4.2"
